# django_null

./: Makefile  README.md  TODO  data.txt  fdjsnjnd.py  manage.py  pyproject.toml
apps/: admin.py  apps.py  consumers.py  models.py  routing.py  serializer.py  views.py
root/: asgi.py  settings.py
templates/: custom_change_form.html
